# SapIsuAssistant

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  PRACTICES.md  README.md  docker-compose.yml  pyproject.toml  run.py  tailwind.config.js
.github/instructions/: inst.instructions.md
.github/workflows/: ci.yml
docs/ip_box/00_technical_ip_dossier/: TECHNICAL_IP_DOSSIER.md  generate_technical_ip_dossier.py
docs/ip_box/01_position_paper/: IP_BOX_POSITION_PAPER.md
docs/ip_box/02_ip_asset_identification/: IP_ASSET_IDENTIFICATION.md
docs/ip_box/03_technical_architecture/: TECHNICAL_ARCHITECTURE.md
docs/ip_box/04_rnd_development_report/: RND_DEVELOPMENT_REPORT.md
reports/templates/: revenue_mapping_template.csv
src/: __main__.py
src/assistant/ingestion/: schema.py  (+2 more)
src/incidents/: __init__.py
src/ipbox/: __init__.py  reporting.py  usage_logging.py
src/research/: __init__.py
src/shared/: app_state.py  client_manager.py  env_loader.py  errors.py  logging_config.py  tokens.py
src/ui/: app.py
src/web/: app.py  dependencies.py
tests/: test_comprehensive.py  test_e2e_comprehensive.py  test_env_and_synthesis_schema.py  test_finance.py  test_incidents.py  test_ingestion_transitions.py  test_ipbox_usage_reporting.py  test_kanban_bulk.py  test_m0_setup.py  test_m1_client_manager.py  test_m2_kb_repositories.py  test_m3_qdrant_integration.py  test_m4_extraction.py  test_m5_synthesis.py  test_m6_chat_rag.py  test_m7_kanban.py  test_research_pipeline.py  test_run_script.py  test_ui.py  test_ui_controls.py  test_v020_features.py  test_web_routes.py
(+77 files in other folders)
